[project]
name = "leosmodule"
version = "1.0.0"
description = "Leos test module"
authors = [
    { name = "Leonhard Menschner", email = "Leonhard.Menschner@ukdd.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
homepage = "https://github.com/Leonhard2000"
documentation = "https://github.com/Leonhard2000"

packages = [{include = "leosmodule"}]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "ipykernel >=6.28.0",
    "ipython >=8.25",
    "notebook >=7.0.8",
    "anndata >=0.10.8",
    "cellphonedb >=5.0.1",
    "geosketch >=1.2",
    "h5py >=3.11.0",
    "ktplotspy >=0.2.4",
    "matplotlib >=3.9.0",
    "numpy >=1.26.4",
    "numpy_groupies >=0.11.1",
    "openpyxl >=3.1.5",
    "pathlib >=1.0.1",
    "pandas >=2.2.2",
    "requests >=2.32.3",
    "scanpy >=1.10.2",
    "scikit-learn >=1.5.1",
    "scipy >=1.11.0",
    "setuptools >=69.5.1",
    "tqdm >=4.60,<5.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"